# sued-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  audio.rs  cli.rs  config.rs  constants.rs  language.rs  main.rs
src/core/: engine.rs  mod.rs
src/ui/: app.rs  effects.rs  mod.rs  screens.rs  theme.rs
src/ui/screens/: about.rs  ask.rs  common.rs  config.rs  info.rs  intro.rs  menu.rs
