[package]
name = "sued-rs"
version = "0.1.0"
edition = "2024"
description = "A horror-themed terminal recreation of SueD, the 2000s Brazilian prank oracle."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Danilo-Guedes/sued-rs"
readme = "README.md"
keywords = ["tui", "prank", "oracle", "terminal", "horror"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Audio is optional so the project builds with no ALSA headers (M1 doesn't use it).
# Flip `default = ["audio"]` at M3 once sound is wired in.
kira = { version = "0.12.1", optional = true }

[features]
default = []
audio = ["dep:kira"]
